// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animal Service When a request to add an animal is made should return the correct data 1`] = `
Object {
  "breed": "addedAnimalBreed",
  "gender": "Female",
  "name": "addedAnimal",
  "vaccinated": false,
}
`;

exports[`Animal Service When a request to delete an animal with name = Bigotes is made should return the correct data 1`] = `""`;

exports[`Animal Service When a request to list all animals is made should return the correct data 1`] = `
Array [
  Object {
    "breed": "Bengali",
    "gender": "Female",
    "name": "manchas",
    "vaccinated": true,
  },
]
`;

exports[`Animal Service When a request to list an animal with name = Bigotes is made should return the correct data 1`] = `
Object {
  "breed": "Bengali",
  "gender": "Female",
  "name": "Bigotes",
  "vaccinated": true,
}
`;

exports[`Animal Service When a request to update an animal with name = Manchas should return the correct data 1`] = `
Object {
  "breed": "Bengali",
  "gender": "Female",
  "id": 10,
  "name": "manchas",
  "vaccinated": true,
  "vaccines": Array [
    "lupus",
    "rabia",
  ],
}
`;
